--- a/EUREKASERVER.properties
+++ b/EUREKASERVER.properties
@@ -1,6 +1,7 @@
 spring.application.name=EUREKASERVER
 server.port=8761
-eureka.instance.hostname=localhost
+eureka.instance.hostname=eureka-server
+eureka.instance.prefer-ip-address=true
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.server.enable-self-preservation=false
