Update and rename EUREKASERVER.properties to EUREKA-SERVER.properties

--- a/EUREKA-SERVER.properties
+++ b/EUREKA-SERVER.properties
@@ -1,4 +1,4 @@
-spring.application.name=EUREKASERVER
+spring.application.name=EUREKA-SERVER
 server.port=8761
 eureka.instance.hostname=eureka-server
 eureka.instance.prefer-ip-address=true
