--- a/EUREKA-SERVER.properties
+++ b/EUREKA-SERVER.properties
@@ -5,3 +5,4 @@ eureka.instance.prefer-ip-address=true
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.server.enable-self-preservation=false
+management.endpoints.web.exposure.include=health,info
