--- a/API-GATEWAY.properties
+++ b/API-GATEWAY.properties
@@ -1,6 +1,6 @@
 spring.application.name=API-GATEWAY
 server.port=8084
-eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 eureka.instance.hostname=localhost
 
 spring.cloud.gateway.discovery.locator.enabled=true
