--- a/API-GATEWAY.properties
+++ b/API-GATEWAY.properties
@@ -3,7 +3,7 @@ server.port=8084
 eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 eureka.instance.hostname=localhost
 
-spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.enabled=false
 spring.cloud.loadbalancer.ribbon.enabled=false
 
 app.greeting=SERVICIO DE APIGATEWAY CORRECTAMENTE CONFIGURADO =)
