--- a/COLABORADORES-SERVICIO.properties
+++ b/COLABORADORES-SERVICIO.properties
@@ -4,8 +4,8 @@ server.servlet.encoding.enabled=true
 server.servlet.encoding.force-response=true 
 server.servlet.encoding.force=true 
 server.port=8081
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.instance.hostname=localhost
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
+eureka.instance.hostname=colaboradores
 
 logging.level.root=INFO
 logging.level.org.springframework=INFO
