--- a/AUTENTICACION-SERVICIO.properties
+++ b/AUTENTICACION-SERVICIO.properties
@@ -6,5 +6,6 @@ spring.datasource.password=ContrasennaPostgres1
 spring.datasource.driver-class-name=org.postgresql.Driver
 jwt.secret=DMc1hbllx5eCpB41yuytI0S10rK5ve7+K5plMBDH+D0=
 jwt.expiration=3600000
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.instance.hostname=localhost
+
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
+eureka.instance.hostname=autenticacion
