--- a/DOCUMENTOS-SERVICIO.properties
+++ b/DOCUMENTOS-SERVICIO.properties
@@ -5,3 +5,6 @@ spring.cloud.azure.storage.blob.container-name=documentos-habitar
 spring.datasource.url=jdbc:postgresql://autenticacion-habitar.postgres.database.azure.com:5432/habitar_documentos?user=ssilvana&password=ContrasennaPostgres1&sslmode=require
 spring.datasource.username=ssilvana@autenticacion-habitar
 spring.datasource.password=ContrasennaPostgres1
+
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
+eureka.instance.hostname=documentos
