--- a/API-GATEWAY.properties
+++ b/API-GATEWAY.properties
@@ -1,7 +1,7 @@
 spring.application.name=API-GATEWAY
 server.port=8084
 eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
-eureka.instance.hostname=localhost
+eureka.instance.hostname=api-gateway
 
 spring.cloud.gateway.discovery.locator.enabled=false
 spring.cloud.loadbalancer.ribbon.enabled=false
