--- a/API-GATEWAY.properties
+++ b/API-GATEWAY.properties
@@ -11,3 +11,5 @@ app.greeting=SERVICIO DE APIGATEWAY CORRECTAMENTE CONFIGURADO =)
 logging.level.org.springframework.cloud.gateway=DEBUG
 logging.level.org.springframework.cloud.loadbalancer=DEBUG
 logging.level.com.netflix.discovery=DEBUG
+
+jwt.secret=DMc1hbllx5eCpB41yuytI0S10rK5ve7+K5plMBDH+D0=
